# ModifyLoadingLayer

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  about.md  mod.json
.github/workflows/: multi-platform.yml
src/: Buttons.cpp  CustomLoadingLayer.cpp  CustomLoadingLayer.hpp  DragNode.cpp  DragNode.hpp  FLAlertInput.cpp  FLAlertInput.hpp  InputPopup.cpp  InputPopup.hpp  LoadignLayer.cpp  LoadingEditorUI.cpp  LoadingEditorUI.hpp  LoadingLayerEditor.hpp  MLLManager.cpp  MLLManager.hpp  MMLManager.cpp  MMLManager.hpp  Opacity.cpp  Opacity.hpp  RGBA.cpp  RGBA.hpp  Rotation.cpp  Rotation.hpp  RotationControl.cpp  RotationControl.hpp  Scale.cpp  Toolbar.cpp  Toolbar.hpp  main.cpp
src/Editor/: CustomLoadingLayer.cpp  CustomLoadingLayer.hpp  DragNode.cpp  DragNode.hpp  InputPopup.cpp  InputPopup.hpp  LoadingEditorUI.cpp  LoadingEditorUI.hpp  RGBA.cpp  RGBA.hpp  Rotation.cpp  Scale.cpp  Scale.hpp
